update docs, demos